feat: Multi-difficulty RC levels, user analytics, admin dashboard, quiz mode

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,7 @@ TIMEZONE=UTC
 # Daily send time (HH:MM format in specified timezone)
 DAILY_SEND_TIME=08:00
 
+# Admin User IDs (comma-separated for multiple admins)
+# Get your user ID by sending /start to the bot and checking logs
+# Example: ADMIN_USER_IDS=123456789,987654321
+ADMIN_USER_IDS=
